[metadata]
name = curses_key_catch
version = 0.1.0
description = displays the code for the key that is pressed when in curses
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
